[Lab04] Fix broken textarea overflow in Exercise 02

--- a/Lab04/Exercise4/style.css
+++ b/Lab04/Exercise4/style.css
@@ -11,22 +11,25 @@ textarea {
     border: none;
 }
 
-#content {
+#container {
+    margin: auto;
+    width: 38%;
+}
+
+#container > * {
     padding: 10px;
+}
+
+#content {
     border: 5px solid black;
     border-radius: 10px;
 }
 
-#content-max {
-    padding: 10px;
-    border: 5px solid red;
-    border-radius: 10px;
+.max {
+    border: 5px solid red !important;
+    border-radius: 10px !important;
 }
 
-#content-max > textarea {
-    color: red;
-}
-
-#word-count-max {
-    color: red;
+.max > * {
+    color: red !important;
 }
